fix : episode select visibility

--- a/src/renderer/src/assets/style.css
+++ b/src/renderer/src/assets/style.css
@@ -83,6 +83,12 @@
 }
 
 #copyButton,
-#saveButton {
+#saveButton,
+#episodeSelct {
   visibility: hidden;
+}
+
+#episodeSelct {
+  width: 55px;
+  height: 25px;
 }
